--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "react-highlight",
   "version": "1.0.0",
   "description": "seacrh highlighter react component",
-  "main": "index.js",
+  "main": "highlight.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
