--- a/package.json
+++ b/package.json
@@ -2,13 +2,15 @@
   "name": "react-highlight",
   "version": "1.0.0",
   "description": "seacrh highlighter react component",
-  "main": "highlight.js",
+  "main": "lib/react-highlight.js",
   "scripts": {
+    "build": "webpack --mode=build",
+    "dev": "webpack --progress --colors --watch --mode=dev",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
     "type": "git",
-    "url": "git remote add origin https://github.com/askbeka/react-search-highlighter.git\u001b[D\u001b[D\u001b[D\u001b[D\u001b[D\u001b[D\u001b[D\u001b[D\u001b[D\u001b[D\u001b[D\u001b[D\u001b[D\u001b[D\u001b[D\u001b[D\u001b[D\u001b[D\u001b[D\u001b[D\u001b[D\u001b[D\u001b[D\u001b[D\u001b[D\u001b[D\u001b[D\u001b[D\u001b[D\u001b[D\u001b[D\u001b[D\u001b[D\u001b[D\u001b[D\u001b[D\u001b[D\u001b[D\u001b[D\u001b[D\u001b[D\u001b[D\u001b[D\u001b[D\u001b[D\u001b[D\u001b[D\u001b[D\u001b[D:"
+    "url": "https://github.com/askbeka/react-search-highlighter"
   },
   "keywords": [
     "react",
@@ -19,16 +21,21 @@
   "license": "ISC",
   "devDependencies": {
     "babel-core": "^6.18.0",
+    "babel-eslint": "^7.1.0",
     "babel-loader": "^6.2.6",
     "babel-preset-es2015": "^6.18.0",
     "babel-preset-latest": "^6.16.0",
+    "babel-preset-react": "^6.16.0",
     "babel-preset-stage-0": "^6.16.0",
+    "eslint": "^3.8.1",
+    "eslint-loader": "^1.6.0",
+    "eslint-plugin-react": "^6.4.1",
     "webpack": "^1.13.3",
-    "webpack-dev-server": "^1.16.2"
+    "webpack-dev-server": "^1.16.2",
+    "yargs": "^6.3.0"
   },
   "dependencies": {
     "front-markjs": "^8.4.0-1",
-    "mark.js": "julmot/mark.js",
     "react": "^15.3.2",
     "react-dom": "^15.3.2"
   }
