removed unnecessary deps

--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "keywords": [
     "react",
     "highlight",
+    "mark",
     "search"
   ],
   "author": "Beknar Askarov @askbeka",
@@ -36,7 +37,6 @@
   },
   "dependencies": {
     "front-markjs": "^8.4.0-1",
-    "react": "^15.3.2",
-    "react-dom": "^15.3.2"
+    "react": "^15.3.2"
   }
 }
